still having css layout issues. also factored out goals lists into partials and made it easy to have goals be editable for admins on any page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -64,6 +64,15 @@ ol li, ul li{
 	line-height:2;
 }
 */
+[class*="span"] {
+	margin-top: 6em;
+}
+.span12 {
+	margin-top: 2em;
+}
+.row [class*="span"] {
+	margin-top: 0;
+}
 
 h1 {
 	margin-bottom: 0.5em;
